<resources>
    <string name="app_name">MineCraft</string>
    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_download">Download</string>

    <string name="btn_install_behavior">Install Behavior</string>
    <string name="btn_download_behavior">DownLoad Behavior</string>
    <string name="btn_install_pack">Install Pack</string>
    <string name="btn_download_pack">Download Pack</string>

    <string name="btn_install">Install</string>
    <string name="terms_of_usage">Terms of Usage</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="go_premium">Go Premium</string>

    <!-- Text  From Settings -->
    <string name="txt_terms_of_usage">Terms of Usage</string>
    <string name="txt_help">Help</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_details">Addons</string>
    <string name="title_activity_splashscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="empty_addon">No Addon Installed</string>
    <!-- Text  From Permissions -->
    <string name="dialog_requestPerm_msg">Needed permissions to <bold> WRITE EXTERNAL STORAGE</bold>, with out this you can\'t install pack </string>
    <string name="dialog_requestPerm_title">Permission</string>
    <string name="dialog_requestPerm_butt_OK">Give Permission</string>
    <string name="msg_no_internet">No Internet connection</string>
    <string name="btn_snack_connect">Connect</string>
    <string name="msg_snack_go_main">Go to Next</string>
    <string name="dialog_title_no_internet">Bad Connection</string>
    <string name="dialog_no_internet_go_next">Go Next</string>
    <string name="dialog_no_internet_leave">Leave</string>
    <string name="msg_finish_download">Finished</string>
    <string name="title_no_found_app">Not found Application</string>
    <string name="msg_go_download_app">Please download  MineCraft to install addon </string>
    <string name="msg_empty_list">Empty list</string>
    <string name="btn_install_resource">Install Resource</string>

    <string name="subscription_info">Subscription Info</string>
    <string name="start_trial_an_plan"><b>Start Trial and Plan</b></string>
    <string name="title_fragment_trial">Premium Subscription</string>
    <string name="txt_policy">Lorem Ipsum is simply dummy \n
        text of the printing and typesetting industry.\n\n
        Lorem Ipsum has been the industry\'s standard \n
        dummy text ever since the 1500s, \n
        when an unknown printer took a galley of type and
        scrambled it to make a type specimen book.\n\n
        <b> <font color="#4fc3f7">It has survived not only five centuries</font></b> \n\n\n
        but also the leap into electronic \n
        typesetting, remaining essentially unchanged.\n\n
        It was popularised in the 1960s with the release of \n\n\n
        Letraset sheets containing Lorem Ipsum passages,\n
        and more recently with desktop publishing software \n\n\n
        like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="alert_btn_continue">Continue</string>
    <string name="alert_btn_leave">Leave</string>
    <string name="alert_btn_reload">Reload</string>
    <string name="alert_network_title">Network State</string>
    <string name="alert_no_network_msg">No internet connection reload App offline or exit?</string>
    <string name="alert_network_msg">You have internet connection reload App with new content or Continue with offline version?</string>
    <string name="btn_share">Share</string>
    <string name="btn_prepay">Prepay</string>
    <string name="snack_msg_wait">Please wait until the files are ready</string>
    <string name="msg_share_addon">Share Addon</string>

</resources>