<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/setting_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/txt_share_bg"
        app:layout_constraintBottom_toBottomOf="@+id/btn_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_help" />

    <Button
        android:id="@+id/btn_help"
        style="@style/CustomStyleButtons"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_help"
        android:text="@string/help"
        app:layout_constraintBottom_toTopOf="@+id/btn_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/txt_share_bg"
        app:layout_constraintBottom_toBottomOf="@+id/btn_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_policy" />

    <Button
        android:id="@+id/btn_policy"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        style="@style/CustomStyleButtons"
        android:layout_marginTop="90dp"
        android:background = "@drawable/btn_policy"
        app:layout_constraintBottom_toTopOf="@+id/btn_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help" />

    <View
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/txt_share_bg"
        app:layout_constraintBottom_toBottomOf="@+id/btn_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_terms" />

    <Button
        android:id="@+id/btn_terms"
        android:layout_marginTop="90dp"
        style="@style/CustomStyleButtons"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_terms"
        android:text="@string/terms_of_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_policy" />


</androidx.constraintlayout.widget.ConstraintLayout>